# VisEval

./: .env.example  .gitignore  pyproject.toml
examples/: evaluate.py
examples/agent/: chat2vis.py  coml4vis.py  utils.py
viseval/: dataset.py  evaluate.py
viseval/check/: surface_form_check.py
