
[tool.poetry]
name = "vis-evaluator"
version = "0.0.3"
description = "A visual evaluation toolkit."
authors = ["okczero <okczero@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/OK-zero/VisEval"
documentation = "https://github.com/OK-zero/VisEval#readme"
homepage = "https://github.com/OK-zero/VisEval"
packages = [
    { include = "viseval" }
]

[tool.poetry.dependencies]
python = ">=3.10"
langchain = "*"
python-dotenv = "*"
numpy = "*"
pandas = "*"
matplotlib = "*"
seaborn = "*"
CairoSVG = "*"
selenium = "*"
llmx = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "*"
pre-commit = "*"
black = "*"
isort = "*"
hatch = "*"
mlcopilot = "*"
lida = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"